@@ -1,3 +1,6 @@
+HEAD
+	+ Non-ASCII characters ban fully enforced, fixed problem in chmod
+	  mode when reinstalling package
 2.0.4
 	+ Packaging fixes and natty support
 2.0.3
